removed borders for qa positionaing and spacing.

--- a/index-borders.html
+++ b/index-borders.html
@@ -44,92 +44,6 @@ img.slide:nth-child(1){
 
 
 <!-- begin disclaimer announcing no intent of mcdonald proprietary infringements -->
-<tr>
-    <td>
-<table class="disclaimer" width="100%" align="center" border="0" 
-cellspacing="0" cellpadding="0" style="background-color:gold; 
-text-align:left; margin:0; padding:0;">
-  <tr>
-      <td style="width:30%; text-align:left; 
-      font-family:Arial, Helvetica, sans-serif; 
-      font-size:14px; color:#292929;
-      border:1px solid black; padding:20px 20px 10px 20px; 
-      vertical-align:auto;">
-          <span style="font-weight:600; 
-          font-size:.9rem; letter-spacing:1px;">
-                DISCLAIMER: 
-          </span>
-          <br/>Below are clones of my emails from corporations whom i subscribe to as a customer. These clones are only for Demonstration Purposes of my coding skills. No infringements are intended against any corporation's copyrights, trademarks, intellectual properties, logos, or other proprietary assets. All trademarks are the property of their respective owners. Please contact me if there are any infringement violations i overlooked. Thank you! 
-      </td>
-
-      <td style="width:40%; text-align:left; 
-      font-family:Arial, Helvetica, sans-serif; 
-      font-size:14px; color:#292929;
-      border:1px solid black; 
-      padding:20px 20px 10px 20px; vertical-align:auto;">
-          <span style="font-weight:600; 
-          font-size:.9rem; letter-spacing:1px;
-          text-decoration:underline;">
-                readme: mcdonald's menu 
-          </span>
-          <br/> Below is a clone of McDonald's menu website. This landing page appears when one clicks to sign into their free wifi. I built this with pure html5, css3, and javascript.
-      </td>
-
-      <td style="width:30%; text-align:left; 
-      font-family:Arial, Helvetica, sans-serif; 
-      font-size:14px; color:#292929; 
-      border:1px solid black; padding:20px 20px 10px 20px; 
-      vertical-align:auto;">
-          <span style="font-weight:600; 
-          font-size:.9rem; letter-spacing:1px;">
-                TECHNOLOGIES USED:
-          </span>
-          <br/> * html tables, html5, css3, web accessibility
-          <br/> * 
-            <span>
-                <a align="center" href="https://github.com/jerome-wilson-developer/email_promo-starbucks-happy-hour-drinks" target="_blank">github,</a>
-            </span>            
-            vsc, npm, webpack, gulp, lighthouse, 
-            <span>
-                <a href="https://resume-jerome-wilson-developer.netlify.com/" target="_blank">netlify</a>
-            </span> 
-          <hr/>
-          <a align="center" style="padding:5px 3px 5px 5px;">
-            <img src="images/icon-html-table-png-128x128-black-8.png" 
-            width="80" height="50" 
-            alt="icon for html5 tables"/>
-          </a>
-          <a align="center" style="padding:5px 3px 5px 3px;">
-            <img src="images/icon-html5-png-128x128.png" 
-            width="50" height="50" 
-            alt="icon for html5"/>
-          </a>
-          <a align="center" style="padding:5px 3px 5px 3px;">
-            <img src="images/icon-css3-png-128x128.png" 
-            width="50" height="50" 
-            alt="icon for css3"/>
-          </a>
-          <a align="center" style="padding:5px 3px 5px 3px;">
-            <img src="images/icon-wai-aria-accessibility-png-128x128.png" 
-            width="50" height="50" 
-            alt="icon for web accessibility"/>
-          </a>
-          <a href="https://github.com/jerome-wilson-developer/email_transact-usps-auto-renew-pobox" align="center" style="padding:5px 5px 5px 3px;">
-            <img src="images/icon-github-png-128x128.png" 
-            width="50" height="50" 
-            alt="icon for github files"/>
-          </a>
-      </td>
-  </tr>
-  </table>
-      </td>
-  </tr>
-  <!-- end disclaimer announcing no intention of proprietary infringements -->
-
-
-
-
-<!-- begin disclaimer announcing no intent of mcdonald proprietary infringements -->
 <table class="header" align="center" border="0" cellspacing="0" cellpadding="0"
 width="100%" style="background-color:gold;">
           <!-- <tr style="background-color:#52b8ff;"> -->
@@ -281,7 +195,7 @@ width="100%" style="background-color:gold;">
                 Explore our nutrition facts and learn more 
                 <br/>about your favorite McDonald’s menu items. 
             </p>
-            <button><a href="https://www.mcdonalds.com/us/en-us/about-our-food/nutrition-calculator.html">Get Nutrition Details</a></button>
+            <button><a href="public/nutrition-calculator.html">Get Nutrition Details</a></button>
         </div>
 
         <div class="six-offers">     
@@ -291,7 +205,7 @@ width="100%" style="background-color:gold;">
                 Real milk. Real sugar. Real ahh. 
                 <br/>Now at select retailers near you. 
             </p>
-            <button><a href="https://www.mcdonalds.com/us/en-us/mccafe/rewards.html">Learn More</a></button>
+            <button><a href="public/mccafe.html">Learn More</a></button>
         </div>
 
         <div class="six-offers">      
@@ -301,7 +215,7 @@ width="100%" style="background-color:gold;">
                 Discover your favorites on the $1 $2 $3 
                 <br/>Dollar Menu.
             </p>
-            <button><a href="https://www.mcdonalds.com/us/en-us/full-menu/123dollarmenu.html">Learn More</a></button>
+            <button><a href="public/123dollarmenu.html">Learn More</a></button>
         </div>
     </section>
     <!-- begin row1-3columns-six-offers section -->
@@ -316,7 +230,7 @@ width="100%" style="background-color:gold;">
                 Quarter Pounder®* patties cooked fresh and hot 
                 <br>when you order.
             </p>
-            <button><a href="https://www.mcdonalds.com/us/en-us/about-our-food/fresh-beef.html">Learn More</a></button>
+            <button><a href="/">Learn More</a></button>
         </div>
 
         <div class="six-offers">                  
@@ -361,7 +275,7 @@ width="100%" style="background-color:gold;">
     <section class="top-footer-menu">
         
         <ul class="six-footer-menus">
-            <p style="color:#524B29;">About Us</p>
+            <p style="color:#524B29; font-size:55px;">About Us</p>
             <a><li>Our History</li></a>
             <a class="six-footer-menus-links" href="#"><li>Leadership Team</li></a>
             <a href="#" class="six-footer-menus-links"><li>Values in Action</li></a>
@@ -444,8 +358,7 @@ width="100%" style="background-color:gold;">
                 <div class="googleplay-apple-apps" style="margin-left:650px;">
                     <a href="https://play.google.com/store/apps/details?id=com.mcdonalds.app&hl=en">
         
-                        <img src="./public/img/icon-download-apple-blackbg.png
-                        " alt="googleplay-download" style="margin-right:20px;"/>
+                        <img src="./public/img/icon_playstore.png" alt="googleplay-download" style="margin-right:20px;"/>
                         <!-- <img src="fa-googleplay" alt="googleplay-download" style="margin-right:20px;"/> -->
                     </a>
                     <a href="https://apps.apple.com/us/app/mcdonalds/id922103212">
@@ -461,10 +374,10 @@ width="100%" style="background-color:gold;">
 
     <section class="main-footer-section">
         <ul class="main-footer-menu" style="width:100%;">
-            <a href="https://www.mcdonalds.com/us/en-us/contact-us.html"><li>Contact Us</li></a>
-            <a href="https://www.mcdonalds.com/us/en-us/privacy.html"><li>Privacy(Updated)</li></a>
-            <a href="https://www.mcdonalds.com/us/en-us/terms-and-conditions.html"><li>Terms and Conditions</li></a>
-            <a href="https://www.mcdonalds.com/us/en-us/accessibility.html"><li>Accessibility</li></a>
+            <a href="#"><li>Contact Us</li></a>
+            <a href="#"><li>Privacy(Updated)</li></a>
+            <a href="#"><li>Terms and Conditions</li></a>
+            <a href="#"><li>Accessibility</li></a>
         </ul>
         <div class="copyright" style="width:100%;">
             <img class="img-logo" src="./public/img/homepg-logo_48x48.png" alt="mcdonalds-logo" style="margin-left:220px;" />
