--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             text-decoration:underline;">
                   README: MCDONALDS MENU WEBSITE
             </span>
-            <br/>Below is a landing page clone of McDonald's menu website. This website appears when you click to sign into their free wifi at their restaurants. I was impressed with the power and simplicity of the design and the high-quality images. I re-built this website with pure html5, css3, and javascript.
+            <br/>One day at McDonald's, i clicked on the guest's wifi signal to use their internet. This is the landing page that rendered. i decided to clone it as a great example of minimalism art using white space, content, imagery, spacing, and positioning.
         </td>
 
         
