refactored social media icons, app downloads, and top nav menu. added 4 sm icon images.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
       <td style="width:30%; text-align:left; 
       font-family:Arial, Helvetica, sans-serif; 
       font-size:14px; color:#292929;
-      border:1px solid black; padding:20px 20px 10px 20px; 
+      border:1px solid black; 
+      padding:20px 20px 10px 20px; 
       vertical-align:auto;">
           <span style="font-weight:600; 
           font-size:.9rem; letter-spacing:1px;">
@@ -170,6 +171,9 @@
 <!-- end disclaimer announcing no intention of proprietary infringements -->
 <hr/>
 
+<header class="header" style="height:200px;
+padding-left:100px;">
+
 <!-- begin navigation for the top-menu-1, top-menu-2, and the main-menu -->
 <!-- add mcdonald's golden arches logo -->
 <nav id="main-nav-wrapper">
@@ -184,14 +188,19 @@
     <ul class="top-menu-1">
         <li>Language</li>
         <li>Sign Up for Email</li>
-        <a href="https://careers.mcdonalds.com/main/"><li>Careers</li></a>
+        <a href="https://careers.mcdonalds.com/main/">
+            <li>Careers</li></a>
     </ul>
 <!-- end top-menu-1 section -->    
 <!-- begin top-menu-2 section -->
     <ul class="top-menu-2">
-        <a href="https://www.mcdonalds.com/us/en-us/search-results.html"><li>Search</li></a>
-        <a href="https://www.mcdonalds.com/us/en-us/restaurant-locator.html"><li>3531 Flat Shoals Rd</li></a>
-        <a href="https://www.mcdonalds.com/us/en-us/restaurant-locator.html"><li>Change</li></a>
+        <a href="https://www.mcdonalds.com/us/en-us/search-results.html">
+            <li>Search</li>
+        </a>
+        <a href="https://www.mcdonalds.com/us/en-us/restaurant-locator.html">
+            <li>3531 Flat Shoals Rd</li></a>
+        <a href="https://www.mcdonalds.com/us/en-us/restaurant-locator.html">
+            <li>Change</li></a>
     </ul>
     <!-- end top-menu-2 section -->
 </nav>   
@@ -199,15 +208,25 @@
 <nav class="main-menu">
     <ul>
         <li>Our Menu</li>
-        <a href="https://www.mcdonalds.com/us/en-us/mccafe.html"><li>McCafe</li></a>
-        <a href="https://www.mcdonalds.com/us/en-us/about-our-food.html"><li>About Our Food</li></a>
-        <a href="https://www.mcdonalds.com/us/en-us/deals.html"><li>Deals and Our App</li></a>
-        <a href="https://www.mcdonalds.com/us/en-us/whats-hot.html"><li>Trending Now</li></a>
-        <a href="https://www.mcdonalds.com/us/en-us/restaurant-locator.html"><li>Locate</li></a>
+        <a href="https://www.mcdonalds.com/us/en-us/mccafe.html">
+            <li>McCafe</li></a>
+        <a href="https://www.mcdonalds.com/us/en-us/about-our-food.html">
+            <li>About Our Food</li></a>
+        <a href="https://www.mcdonalds.com/us/en-us/deals.html">
+            <li>Deals and Our App                
+            </li></a>
+        <a href="https://www.mcdonalds.com/us/en-us/whats-hot.html">
+            <li>Trending Now</li></a>
+        <a href="https://www.mcdonalds.com/us/en-us/restaurant-locator.html">
+            <li>Locate</li></a>
     </ul>
 </nav>
 <!-- end main-menu section -->
 <!-- end navigation for the top-menu-1, top-menu-2, and the main-menu sections -->
+
+</header>
+
+
 
 
 <!-- begin the header-section container for the photo gallery slider -->
@@ -322,35 +341,46 @@
 
     
 <!-- Begin social-media-icons-section and googleplay-apple-apps-download section -->
-<section class="6-social-media-icons" style="padding-left:400px;">
+<section class="6-social-media-icons" style="padding-left:500px;">
 
     <!-- Begin 6-social-media-icons section -->    
     <ul class="6-social-media-icons" 
     style="display:flex; flex-direction:row; 
     text-align:center;">
+
             <li class="6-footer-icon-links" style="padding:10px 10px;"><a href="http://facebook.com/McDonaldsUS" target="_blank">
-                <img src="public/img/icon_facebook_icon.png" alt="facebook-icon"/>
+                <img src="public/img/icons-black-no-bg-facebook.png" 
+                width="60" height="60" alt="facebook-icon"/>
             </a></li>                
+
             <li class="6-footer-icon-links" style="padding:10px 10px;"><a href="https://twitter.com/intent/tweet?text=https://www.mcdonalds.com/us/en-us.html" target="_blank">
-                <img src="public/img/icon_twitter_icon.png" alt="twitter-icon"/>
+                <img src="public/img/icons-black-no-bg-twitter.png" 
+                width="60" height="60" alt="twitter-icon"/>
             </a></li>
-            <li class="6-footer-icon-links" style="padding:10px 10px;"><a href="https://www.youtube.com/c/McDonalds" target="_blank">
-                <img src="public/img/icon_youtube_icon.png" alt="youtube-icon"/>
-            </a></li>
+
             <li class="6-footer-icon-links" style="padding:10px 10px;"><a href="https://www.instagram.com/McDonalds/" target="_blank">
+                <img src="public/img/icons-black-no-bg-instagram.png" 
+                width="60" height="60" alt="instagram-icon"/>
+            </a></li>
+
+            <li class="6-footer-icon-links" style="padding:10px 10px;"><a href="https://www.youtube.com/c/McDonalds" target="_blank">
+                <img src="public/img/icons-black-no-bg-youtube.png" 
+                width="60" height="60" alt="youtube-icon"/>
+            </a></li>
+
+            <!-- <li class="6-footer-icon-links" style="padding:10px 10px;"><a href="https://www.instagram.com/McDonalds/" target="_blank">
                 <img src="public/img/icon_inkedin_icon.png" alt="instagram-icon"/>
             </a></li>
+
             <li class="6-footer-icon-links" style="padding:10px 10px;"><a href="https://mcdonalds.tumblr.com/" target="_blank">
                 <img src="public/img/icon_pinterest_icon.png" alt="pinterest-icon"/>
-            </a></li>
-            <li class="6-footer-icon-links" style="padding:10px 10px;"><a href="https://open.spotify.com/user/mcdonalds" target="_blank">
-                <img src="public/img/icon_google_icon.png" alt="google-plus-icon"/>
-            </a></li>
+            </a></li> -->
+
     </ul>                   
 <!-- end 6-social-media-icons section -->        
     
 <!-- Begin googleplay-apple-download section -->
-    <div class="googleplay-apple-apps" style="margin-top:50px;">
+    <div class="googleplay-apple-apps" style="margin-top:20px;">
         <a href="https://play.google.com/store/apps/details?id=com.mcdonalds.app&hl=en">
             <img src="/public/img/badge-googleplay.png" alt="googleplay-download" style="text-align:center;"/>
         </a>
