--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <li>Search</li>
         </a>
         <a href="https://www.mcdonalds.com/us/en-us/restaurant-locator.html">
-            <li>Find your locale location</li></a>
+            <li>Find your closest location</li></a>
         <a href="https://www.mcdonalds.com/us/en-us/restaurant-locator.html">
             <li>Change</li></a>
     </ul>
