--- a/index.html
+++ b/index.html
@@ -15,27 +15,39 @@
     @media all and (max-width: 960px){
     .main-wrapper{
         width:100%;
+        text-align: center;
     }
     .main-container{
-        width:100%
+        width:100%;
+        text-align: center;
+    }
+    .disclaimer{
+        display: left;
     }
 }
     /* Tablet View */
     @media all and (min-width: 768px) and (max-width: 959px){
     .main-wrapper{
         width:100%;
+        text-align: center;
     }
     .main-container{
-        width:100%
+        width:100%;
+        text-align: center;
+    }
+    .disclaimer{
+        display: left;
     }    
 }
     /* Smartphone View */
     @media all and (max-width: 767px){
     #main-wrapper{
         width:100%;
+        text-align: center;
     }
     .main-container{
-        width:100%
+        width:100%;
+        text-align: center;
     }
     .disclaimer{
         display: none;
