edits for mobile.

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
-        <title>MCDONALDS MENU</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" 
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" 
     crossorigin="anonymous">
-
-    <link rel="stylesheet" href="./public/css/main.css">
+    <link rel="stylesheet" href="./public/css/main.css">   
+     
+                        <title>MCDONALDS MENU</title>
     
 <style>
     /* Desktop View */
-    @media all and (max-width: 960px){
+    /* @media all and (max-width: 960px){
     .main-wrapper{
         width:100%;
         text-align: center;
@@ -23,10 +23,10 @@
     }
     .disclaimer{
         display: left;
-    }
+    } */
 }
     /* Tablet View */
-    @media all and (min-width: 768px) and (max-width: 959px){
+    /* @media all and (min-width: 768px) and (max-width: 959px){
     .main-wrapper{
         width:100%;
         text-align: center;
@@ -37,10 +37,10 @@
     }
     .disclaimer{
         display: left;
-    }    
+    }     */
 }
     /* Smartphone View */
-    @media all and (max-width: 767px){
+    /* @media all and (max-width: 767px){
     #main-wrapper{
         width:100%;
         text-align: center;
@@ -56,11 +56,8 @@
         color:#292929;
         padding:15px 15px;
         margin:10px 10px;
-        /* margin-right: 50px; */
-        /* border:1px solid #000000; */
     }
     #main-content .row1to6-grid{
-        /* margin-top:1rem; */
         display:grid;
         grid-template-columns:1fr 1fr;
         grid-template-rows:450px 450px 700;
@@ -82,7 +79,7 @@
     }
     .main-footer-section .main-footer-menu{
         width:100%;
-    }
+    } */
 }
 </style>
 </head>
@@ -93,7 +90,7 @@
 <tr>
     <td>
   <table class="disclaimer" width="100%" align="center" border="0" 
-  cellspacing="0" cellpadding="0" style="background-color:lightblue; 
+  cellspacing="0" cellpadding="0" style="background-color:gold; 
   text-align:left; margin:0; padding:0;">
   <tr>
       <td style="width:30%; text-align:left; 
@@ -118,7 +115,7 @@
             text-decoration:underline;">
                   README: MCDONALDS MENU WEBSITE
             </span>
-            <br/>This is a clone of the landing page that renders when you use the guest's wifi signal at McDonalds. I rebuilt it as a great example of minimalism art that uses white space, imagery, spacing, positioning, content, and ux/ui design strategies. An good example of "Less is More".
+            <br/>This is a clone of the landing page that renders when you use the guest's wifi internet at McDonalds. I rebuilt it as a great example of minimalist artwork that uses white space, imagery, spacing, positioning, content, and ux/ui design strategies. It is a great example of ... "Less is More".
         </td>        
         <td style="width:30%; text-align:left; 
         font-family:Arial, Helvetica, sans-serif; 
@@ -130,11 +127,10 @@
             font-size:.9rem; letter-spacing:1px;">
                   TECHNOLOGIES USED:
             </span>
-            <br/> html tables, html5, css3, responsive, webpack,
-            <br/>web accessibility,
+            <br/> html tables, html5, css3, javascript, responsive, web accessibility,
                   <a align="center" href="https://github.com/jerome-wilson-developer/landingpg_mcdonalds-menu" target="_blank">
                     GITHUB
-                  </a>, lighthouse, 
+                  </a>, lighthouse audit, 
                   <a href="https://mcdonalds-menu.netlify.com/" target="_blank">
                     NETLIFY
                   </a>.
